<resources>
    <string name="app_name">Youtube_6month</string>
    <string name="back">back</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="_playlist">Playlist</string>
    <string name="select_video_quality" />
    <string name="_480p" />
    <string name="_720p" />
    <string name="_1080p" />
    <string name="download" />
    <string name="Playlist" />
    <string name="Download">Download</string>
    <string name="Select_video_quality">Select video quality</string>
    <string name="_480">480p</string>
    <string name="_720">720p</string>
    <string name="_1080">1080p</string>
    <string name="download_">Download</string>
</resources>